hydrator test / working

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     compile "io.vertx:vertx-dependencies:${vertxVersion}"
     compile "io.vertx:vertx-core:${vertxVersion}"
     compile "io.vertx:vertx-web:${vertxVersion}"
+    compile 'org.jsoup:jsoup:1.11.2'
 }
 
 jar {
