--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,4 @@
  * in the user guide at https://docs.gradle.org/4.5.1/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'vertx-ext-react-ssr'
+rootProject.name = 'vertx-ext-spa-ssr'
