--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-es2015": "^6.24.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-loadable": "^5.3.1",
     "vue": "^2.5.13",
     "vue-server-renderer": "^2.5.13"
   },
